# collection

./: CMakeLists.txt  boost_tcp_client.cc  boost_tcp_server.cc  boost_timer.cc  client.cc  drsdk_socket.cc  echo_client.cc  echo_server.cc  ftok_test.cc  future.cc  ihba_example.cc  main.cc  memcached_demo  memcached_demo.cpp  memcached_demo2  memcached_demo2.cpp  redis_demo.cpp  redis_demo2.cpp  redis_demo_pipeline.cpp  semaphore.cc  server.cc  share_memory.cc  simple_client.cc  simple_server.cc  split_string.cc  tag_value.cc  thread_pool.cc
DRSdk/: CMakeLists.txt
DRSdk/demo/: CMakeLists.txt  fake_ds.cpp  main.cpp
DRSdk/include/: drsdk.h  drsdk_common.h  drsdk_manager.h  drsdk_socket.h  thread_pool.h
DRSdk/source/: drsdk.cpp  drsdk_manager.cpp  drsdk_socket.cpp
DRSdkApp/: CMakeLists.txt  main.cpp
drsdk/: CMakeLists.txt  drsdk.cpp  drsdk.h  drsdk_common.h  drsdk_inner.cpp  drsdk_inner.h  drsdk_manager.cpp  drsdk_manager.h  drsdk_transport_socket.cpp  drsdk_transport_socket.h  thread_pool.h
drsdk_app/: CMakeLists.txt  drsdk_app.cpp
drsdk_fake_ds/: CMakeLists.txt  fake_ds.cpp
execD/: CMakeLists.txt  main.cc
libA/: CMakeLists.txt  libA.cpp  libA.h
libB/: CMakeLists.txt  libB.cpp  libB.h
libC/: CMakeLists.txt  libC.cpp  libC.h
spm/input/pdi/: pdi_20250106-000000-274.json  pdi_20250106-000001-289.json  pdi_20250106-000002-289.json
spm/input/tdf/: tdf_20250106-000000-282.json  tdf_20250106-000001-275.json  tdf_20250106-000002-272.json
spm/output/result/: result_20250109-135541-773.json  result_20250109-135908-395.json  result_20250109-135923-528.json
spm/output/review/: review_20250109-135851-718.json  review_20250109-135908-400.json
src/: aic_manager.cpp  aic_manager.h  main.cpp
